# django-boilerplate

./: .flake8  .gitignore  .pre-commit-config.yaml  docker-compose.yaml  dockerfile  pyproject.toml
apps/projectapp/: tasks.py
apps/projectapp/api/v1/: urls.py  views.py
project/: celery.py  settings.py  urls.py
project/apps/projectapp/: apps.py  models.py  urls.py
project/apps/projectapp/api/v1/: serializer.py  views.py
project/project/: urls.py
